--- a/templates/likes.html
+++ b/templates/likes.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Liked Posts</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='strict.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
